# smithay-clipboard

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  crates.js  doc_index.html  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml  docs.yml
examples/: clipboard.rs
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
search.index/: 3ab3e7eabee9.js  root.js
search.index/crateNames/: 4e7f98675da9.js
search.index/desc/: 2477cd006e61.js
search.index/entry/: 5e1e28bd47d9.js
search.index/function/: b2fe6ad20d88.js
search.index/generic_inverted_index/: a762b6599be9.js
search.index/name/: 4586eca2f642.js
search.index/normalizedName/: ea95f45b9ed2.js
search.index/path/: a05c3ee00943.js
search.index/type/: c38b8a4c8a6a.js
smithay_clipboard/: all.html  index.html  sidebar-items.js  struct.Clipboard.html
src/: data.rs  env.rs  error.rs  lib.rs  mime.rs  primary.rs  state.rs  text.rs  threaded.rs  worker.rs
src/dnd/: mod.rs  state.rs
src/smithay_clipboard/: env.rs.html  lib.rs.html  mime.rs.html  state.rs.html  worker.rs.html
src/smithay_clipboard/worker/: dispatch_data.rs.html  handlers.rs.html  mod.rs.html  seat_data.rs.html  sleep_amount_tracker.rs.html
src/worker/: dispatch_data.rs  handlers.rs  mod.rs  seat_data.rs  sleep_amount_tracker.rs
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
